--- a/doc/src/download.page
+++ b/doc/src/download.page
@@ -1,18 +1,21 @@
-<div class="section">
-<h2 class="section_header">Download</h2>
-<p>The newest version of cmdparse can be downloaded from Rubyforge.</p>
-<p>Homepage: <a href="http://cmdparse.rubyforge.org">cmdparse.rubyforge.org</a><br />
+---
+title: Download &amp; Installation
+inMenu: true
+menuOrder: 3
+---
+h2. Download
+
+The newest version of cmdparse can be downloaded from Rubyforge.
+
+Homepage: <a href="http://cmdparse.rubyforge.org">cmdparse.rubyforge.org</a><br />
 Download: <a href="http://rubyforge.org/frs/?group_id=396">http://rubyforge.org/frs/?group_id=396</a>
-</p>
-</div>
 
-<div class="section">
-<h2 class="section_header">Dependencies</h2>
-<p>optparse - part of the standard ruby distribution, so nothing to do here</p>
-</div>
+h2. Dependencies
 
-<div class="section">
-<h2 class="section_header">Installation</h2>
+optparse - part of the standard ruby distribution, so nothing to do here
+
+h2. Installation
+
 You can use the standard way to install cmdparse:
 <pre>
  $ ruby setup.rb config
@@ -29,4 +32,3 @@ Or you could install cmdparse the "GEM way":
 <pre>
  $ gem install cmdparse
 </pre>
-</div>
