--- a/doc/src/features.page
+++ b/doc/src/features.page
@@ -1,8 +1,11 @@
-<div class="section">
-<h2 class="section_header">Feature list</h2>
-<ul>
-  <li>Based upon the standard library <code>optparse</code></li>
-  <li>Each command is implemented via a class</li>
-  <li>As easy to use as <code>optparse</code> itself</li>
-</ul>
-</div>
+---
+title: Features
+inMenu: true
+menuOrder: 5
+---
+h2. Feature list
+
+* Based upon the standard library @optparse@
+* Default help and version commands
+* Each command is implemented via a class
+* As easy to use as @optparse@ itself!
