--- a/doc/src/index.page
+++ b/doc/src/index.page
@@ -1,21 +1,34 @@
-<div class="section">
-<h2 class="section_header">Welcome</h2>
-<p>... to the homepage of <i><b>cmdparse</b></i>, an advanced command line parser.</p>
-<p>Have a look around the site!</p>
-</div>
+---
+title: HomePage
+inMenu: true
+directoryName: CommandParser
+menuOrder: 1
+---
+h2. Welcome
 
-<div class="section">
-<h2 class="section_header">Description</h2>
-<p>Some new programs use a "command style" command line. Examples for such programs are the "svn"
+... to the homepage of _*CommandParser*_, an advanced command line parser.
+
+Have a look around the site!
+
+h2. News
+
+*cmdparse 1.0.1 released!!!*
+
+Changes:
+
+* Improved HelpCommand: the global options -h and --help take an optional command name now
+* Possibility to define a default command which is used when no command was specified
+* A @NoCommandGivenError@ is thrown when no command on the CLI and no default command was specified
+
+h2. Description
+
+Some new programs use a "command style" command line. Examples for such programs are the "svn"
 program from Subversion and the "gem" program from Rubygems. The standard Ruby distribution has no
-library to create programs that use such a command line interface.</p>
+library to create programs that use such a command line interface.
 
-<p>This library, cmdparse, can be used to create such a command line interface. Internally it uses
-optparse to parse options and it provides a nice API for specifying commands.</p>
+This library, cmdparse, can be used to create such a command line interface. Internally it uses
+optparse to parse options and it provides a nice API for specifying commands.
 
-</div>
+h2. And so
 
-<div class="section">
-<h2 class="section_header">And so ...</h2>
-<p>... have fun!</p>
-</div>
+... have fun!
