* added optional graceful exception handling to CommandParser * added two doc pages: about.page and documentation.page * uniformed naming: only <cmdparse> valid anymore

--- a/doc/src/default.css
+++ b/doc/src/default.css
@@ -144,3 +144,8 @@
     text-align: center;
     border: 1px solid black;
   }
+
+  table.cmdparse-example td {
+    border: 1px solid #408040;
+    background-color: white;
+  }
