--- a/doc/src/index.page
+++ b/doc/src/index.page
@@ -12,7 +12,7 @@ Have a look around the site!
 
 h2. News
 
-<b>2005-??-?? cmdparse 1.0.4 released!!!</b>
+<b>2005-06-16 cmdparse 1.0.4 released!!!</b>
 
 Changes:
 
