--- a/doc/src/index.page
+++ b/doc/src/index.page
@@ -12,7 +12,7 @@ Have a look around the site!
 
 h2. News
 
-<b>2005-??-?? cmdparse 2.0.0 released!!!</b>
+<b>2005-08-16 cmdparse 2.0.0 released!!!</b>
 
 This version is not compatible to previous versions of cmdparse as there have been major changes in
 the API. However, updating your code to use the new API is very easy!
