* included patches #4756 and #4729 from Assaph Mehr and slightly modified them * added the test file for CommandHash from Assaph Mehr * updated Rakefile to run test the test file * updated the tutorial to include information about partial command matching * minor update to index page * update sampe net.rb script to use partial command matching * added emacs desktop file

--- a/doc/src/index.page
+++ b/doc/src/index.page
@@ -12,6 +12,14 @@ Have a look around the site!
 
 h2. News
 
+<b>2006-06-17 cmdparse 2.0.2 released!!!</b>
+
+Changes:
+
+* Included two patches from Assaph Mehr:
+  * partial command matching can now be used (see <a href="{reloctable: tutorial.page}">tutorial page</a>)
+  * now a banner for the help and version commands can be specified
+
 <b>2006-04-05 cmdparse 2.0.1 released!!!</b>
 
 Changes:
