Use https for external fonts

--- a/doc/default.scss
+++ b/doc/default.scss
@@ -270,7 +270,7 @@ $logo-color: #3A974D;
 /***************************************/
 /***************************************/
 
-@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700|Open+Sans+Condensed:300,700");
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700|Open+Sans+Condensed:300,700");
 
 /*********************************************************************************/
 /* Basic                                                                         */
