--- a/doc/news.page
+++ b/doc/news.page
@@ -5,6 +5,13 @@ sort_info: 8
 ---
 ## News
 
+### 2020-01-31 cmdparse 3.0.5 released!
+
+Changes:
+
+* Fix warning on Ruby 2.7 (thanks to Damien Robert)
+
+
 ### 2018-12-22 cmdparse 3.0.4 released!
 
 Changes:
