--- a/doc/news.page
+++ b/doc/news.page
@@ -5,6 +5,13 @@ sort_info: 8
 ---
 ## News
 
+### 2020-05-02 cmdparse 3.0.6 released!
+
+Changes:
+
+* Fix OptParse integration with regards to error handling (thanks to Damien Robert)
+
+
 ### 2020-01-31 cmdparse 3.0.5 released!
 
 Changes:
