--- a/doc/news.page
+++ b/doc/news.page
@@ -5,6 +5,14 @@ sort_info: 8
 ---
 ## News
 
+### 2020-12-08 cmdparse 3.0.7 released!
+
+Changes:
+
+* Behave well when interrupted via <kbd>Control+C</kbd> and when used in a pipe that gets closed
+  (thanks to postmodern)
+
+
 ### 2020-05-02 cmdparse 3.0.6 released!
 
 Changes:
